[package]
name = "librem"
version = "0.0.1"
description = "librem is a Audio and video processing media library"
authors = ["Sebastian Reimers"]
license = "BSD-3-Clause"
homepage = "https://github.com/baresip/rem"
repository = "https://github.com/sreimers/rust-librem"
edition = "2018"

[dependencies]
